Removed invalid authors.0.homepage from composer.json

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "authors": [
         {
             "name": "Simon Marcel Linden",
-            "email": "info@snerve.de",
-            "homepage": "author homepage"
+            "email": "info@snerve.de"
         }
     ],
     "homepage": "https://github.com/simonmarcellinden/scriptloader",
